--- a/src/shop/css/style.css
+++ b/src/shop/css/style.css
@@ -1,3 +1,391 @@
+/*Scott's css for header & footer starts here*/
+* {
+  text-decoration: none;
+  list-style: none;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+#bannerb {
+  width: 100%;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+html p {
+  color: #999;
+}
+
+main {
+  min-height: 100%;
+  width: 100%;
+}
+
+a {
+  color: #222;
+}
+
+.header {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  background: #F2EDE9;
+  color: #000;
+  padding: 0 1rem;
+  height: 80px;
+  /*  search bar */
+}
+.header input {
+  border-radius: 15px;
+  outline: none;
+  width: 200px;
+  border: none;
+  height: 30px;
+  text-indent: 20px;
+}
+.header input::placeholder {
+  opacity: 0.4;
+  background-position: right;
+}
+.header__logo, .header__media {
+  flex: 1;
+}
+.header__nav {
+  display: none;
+}
+@media screen and (min-width: 992px) {
+  .header__nav {
+    display: flex;
+    flex: 2;
+  }
+}
+.header__list {
+  list-style: none;
+}
+@media screen and (min-width: 992px) {
+  .header {
+    display: flex;
+    flex: 2;
+  }
+}
+.header__media {
+  margin-left: auto;
+}
+.header__search {
+  display: none;
+}
+.header__item {
+  margin-right: 1rem;
+}
+.header__icons {
+  justify-content: flex-end;
+}
+.header__icon {
+  display: inline-block;
+  height: 24px;
+  width: 24px;
+  margin-left: 1rem;
+}
+.header__icon input {
+  height: 24px;
+  width: 24px;
+  display: inline-block;
+  margin: 0;
+  cursor: pointer;
+  opacity: 0;
+}
+.header__icons, .header__list {
+  display: flex;
+}
+.header__search {
+  max-height: 24px;
+  max-width: 200px;
+}
+@media screen and (min-width: 992px) {
+  .header__search {
+    display: flex;
+    flex: 2;
+  }
+}
+
+.header__icon {
+  z-index: 12;
+  /*Hamburger Background*/
+}
+.header__icon--menuwrap {
+  width: 24px;
+  height: 24px;
+  background: #fff;
+  display: flex;
+  /* Hamburger Line */
+  /* Hamburger Lines - Top & Bottom */
+  /* Moves Line Down */
+  /* Toggler Animation */
+  /* Turns Lines Into X */
+  /* Rotate On Hover When Checked */
+  /* Show Menu */
+  /*  positionning  */
+}
+.header__icon--menuwrap--toggler {
+  z-index: 10;
+  cursor: pointer;
+  opacity: 1;
+  padding: 0;
+  width: 60px;
+  height: 60px;
+  z-index: 21;
+}
+.header__icon--menuwrap--hamburger {
+  pointer-events: none;
+  padding: 0;
+  margin-left: -25px;
+  margin-top: 10px;
+  z-index: 20;
+}
+.header__icon--menuwrap--hamburger > div {
+  position: relative;
+  flex: none;
+  width: 100%;
+  height: 2px;
+  background: #222;
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  transition: all 0.4s ease;
+}
+.header__icon--menuwrap--hamburger > div::before, .header__icon--menuwrap--hamburger > div::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: -9px;
+  width: 100%;
+  height: 2px;
+  background: inherit;
+}
+.header__icon--menuwrap--toggler:checked {
+  position: fixed;
+  top: 17;
+  right: 45px;
+}
+.header__icon--menuwrap--hamburger > div::after {
+  top: 9px;
+}
+.header__icon--menuwrap--toggler:checked + .header__icon--menuwrap--hamburger > div {
+  transform: rotate(135deg);
+}
+.header__icon--menuwrap--toggler:checked + .header__icon--menuwrap--hamburger > div:before, .header__icon--menuwrap--toggler:checked + .header__icon--menuwrap--hamburger > div:after {
+  top: 0;
+  transform: rotate(90deg);
+}
+.header__icon--menuwrap--toggler:checked:hover + .header__icon--menuwrap--hamburger > div {
+  transform: rotate(225deg);
+}
+.header__icon--menuwrap--toggler:checked ~ .header__icon--menuwrap--menu {
+  visibility: visible;
+}
+.header__icon--menuwrap--toggler:checked ~ .header__icon--menuwrap--menu > div {
+  transform: scale(1);
+  transition-duration: 0.75s;
+}
+.header__icon--menuwrap--toggler:checked ~ .header__icon--menuwrap--menu > div > div {
+  opacity: 1;
+  transition: opacity 0.4s ease 0.4s;
+}
+.header__icon--menuwrap--menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header__icon--menuwrap--menu > div {
+  position: absolute;
+  z-index: 10;
+  background: white;
+  width: 200vw;
+  height: 200vh;
+  display: flex;
+  flex: none;
+  align-items: center;
+  justify-content: center;
+  transform: scale(0);
+  transition: all 0.4s ease;
+}
+.header__icon--menuwrap--menu > div > div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: left;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+.header__icon--menuwrap--menu > div > div h1 {
+  color: #222;
+}
+.header__icon--menuwrap--menu > div > div > ul > li {
+  list-style: none;
+  text-align: left;
+  font-size: 1.5rem;
+  padding: 0.65rem;
+  border-bottom: 1px solid #ccc;
+  width: 80vw;
+}
+.header__icon--menuwrap--menu > div > div > ul > li > a {
+  color: #999;
+}
+
+.footer {
+  z-index: 1;
+  position: inherit;
+  bottom: 0;
+  height: 300px;
+  justify-content: center;
+}
+.footer .nonephone {
+  display: none;
+}
+.footer .left {
+  display: block;
+  float: left;
+  width: 46%;
+  height: 200px;
+}
+.footer .right {
+  display: block;
+  float: right;
+  width: 46%;
+  height: 200px;
+}
+.footer__listwrap {
+  display: table;
+}
+.footer__list {
+  font-size: 12px;
+  color: #999;
+  margin: 1em 2%;
+  margin-bottom: 10px;
+  height: 200px;
+  display: table-cell;
+}
+.footer__list h3 {
+  text-align: left;
+  margin: 20px 0;
+  color: #000;
+}
+.footer__list > ul > img {
+  margin-bottom: 15px;
+}
+.footer__list > ul > li {
+  margin: 15px 0;
+  font-size: 140%;
+}
+.footer__icon {
+  position: relative;
+  color: #999;
+  justify-content: center;
+  border-top: 1px solid;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.footer__icon > div {
+  width: 100%;
+  text-align: center;
+}
+.footer__icon div > ul {
+  padding: 0 5em;
+}
+.footer__icon ul > li {
+  display: inline;
+}
+.footer__icon a {
+  color: #999;
+}
+.footer .down {
+  width: 100%;
+  display: flex;
+}
+
+@media screen and (min-width: 800px) {
+  .footer__list {
+    padding: 0 4em;
+  }
+  .footer .left {
+    display: block;
+    width: auto;
+    height: 200px;
+  }
+  .footer .right {
+    display: block;
+    width: auto;
+    height: 200px;
+  }
+  .footer .nonephone {
+    display: flex;
+  }
+  .footer .nonedesk {
+    display: none;
+  }
+  .footer .up {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 70px;
+  }
+  .footer .down {
+    width: 100%;
+    display: flex;
+  }
+}
+@media screen and (max-width: 800px) {
+  .main, .footer {
+    padding: 0 7.5%;
+  }
+}
+@media screen and (max-width: 800px) {
+  .header {
+    background: #fff;
+  }
+}
+.header__item:hover {
+  transform: scale(1.04);
+}
+@media screen and (min-width: 800px) {
+  .header__icon--menuwrap {
+    background-color: #F2EDE9;
+    display: none;
+  }
+}
+.header__icon--search {
+  display: block;
+}
+@media screen and (min-width: 800px) {
+  .header__icon--search {
+    display: none;
+  }
+}
+
+/* retourner une image */
+.reverse {
+  transform: rotateZ(90deg);
+}
+
+/*# sourceMappingURL=style.css.map */
+/*Scott's css for header & footer ends here*/
+
 /*  
 COLORS :
 black : #222
