--- a/src/shop/css/style.css
+++ b/src/shop/css/style.css
@@ -13,7 +13,8 @@
   width: 100%;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
 }
@@ -35,7 +36,7 @@ a {
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  background: #F2EDE9;
+  background: #f2ede9;
   color: #000;
   padding: 0 1rem;
   height: 80px;
@@ -53,7 +54,8 @@ a {
   opacity: 0.4;
   background-position: right;
 }
-.header__logo, .header__media {
+.header__logo,
+.header__media {
   flex: 1;
 }
 .header__nav {
@@ -100,7 +102,8 @@ a {
   cursor: pointer;
   opacity: 0;
 }
-.header__icons, .header__list {
+.header__icons,
+.header__list {
   display: flex;
 }
 .header__search {
@@ -159,7 +162,8 @@ a {
   justify-content: left;
   transition: all 0.4s ease;
 }
-.header__icon--menuwrap--hamburger > div::before, .header__icon--menuwrap--hamburger > div::after {
+.header__icon--menuwrap--hamburger > div::before,
+.header__icon--menuwrap--hamburger > div::after {
   content: "";
   position: absolute;
   z-index: 1;
@@ -176,14 +180,23 @@ a {
 .header__icon--menuwrap--hamburger > div::after {
   top: 9px;
 }
-.header__icon--menuwrap--toggler:checked + .header__icon--menuwrap--hamburger > div {
+.header__icon--menuwrap--toggler:checked
+  + .header__icon--menuwrap--hamburger
+  > div {
   transform: rotate(135deg);
 }
-.header__icon--menuwrap--toggler:checked + .header__icon--menuwrap--hamburger > div:before, .header__icon--menuwrap--toggler:checked + .header__icon--menuwrap--hamburger > div:after {
+.header__icon--menuwrap--toggler:checked
+  + .header__icon--menuwrap--hamburger
+  > div:before,
+.header__icon--menuwrap--toggler:checked
+  + .header__icon--menuwrap--hamburger
+  > div:after {
   top: 0;
   transform: rotate(90deg);
 }
-.header__icon--menuwrap--toggler:checked:hover + .header__icon--menuwrap--hamburger > div {
+.header__icon--menuwrap--toggler:checked:hover
+  + .header__icon--menuwrap--hamburger
+  > div {
   transform: rotate(225deg);
 }
 .header__icon--menuwrap--toggler:checked ~ .header__icon--menuwrap--menu {
@@ -193,7 +206,10 @@ a {
   transform: scale(1);
   transition-duration: 0.75s;
 }
-.header__icon--menuwrap--toggler:checked ~ .header__icon--menuwrap--menu > div > div {
+.header__icon--menuwrap--toggler:checked
+  ~ .header__icon--menuwrap--menu
+  > div
+  > div {
   opacity: 1;
   transition: opacity 0.4s ease 0.4s;
 }
@@ -351,7 +367,8 @@ a {
   }
 }
 @media screen and (max-width: 800px) {
-  .main, .footer {
+  .main,
+  .footer {
     padding: 0 7.5%;
   }
 }
@@ -365,7 +382,7 @@ a {
 }
 @media screen and (min-width: 800px) {
   .header__icon--menuwrap {
-    background-color: #F2EDE9;
+    background-color: #f2ede9;
     display: none;
   }
 }
@@ -528,7 +545,6 @@ h1 h2 h3 {
   padding-bottom: 10px;
 }
 .aside {
-  
   padding: none;
   margin: none;
   padding-left: 1%;
