--- a/src/css/product.css
+++ b/src/css/product.css
@@ -104,6 +104,8 @@ body {
         display: inline-block;
         vertical-align: middle;
         font-size: 12px; }
+      html main article section .grid-container .review .buying .cart input .number {
+        width: 5%; }
       html main article section .grid-container .review .buying .cart .add {
         background-color: black;
         color: white;
@@ -112,10 +114,23 @@ body {
         background-color: white;
         color: black; }
       html main article section .grid-container .review .buying .buy button {
-        width: 100px;
+        width: 300px;
+        height: 40px;
         background-color: black;
         color: white;
         text-transform: uppercase; }
+      html main article section .grid-container .review .buying .category p {
+        text-transform: uppercase; }
+        html main article section .grid-container .review .buying .category p span {
+          text-decoration: none;
+          color: grey;
+          text-transform: none; }
+      html main article section .grid-container .review .buying .tags p {
+        text-transform: uppercase; }
+        html main article section .grid-container .review .buying .tags p span {
+          text-decoration: none;
+          color: grey;
+          text-transform: none; }
       html main article section .grid-container .review .media-icons ul li {
         display: inline;
         list-style: none;
@@ -174,6 +189,12 @@ body {
     width: 70%;
     margin-left: auto;
     margin-right: auto; }
+    html main article section .home {
+      margin-top: 2%;
+      margin-bottom: 5%;
+      text-transform: capitalize; }
+      html main article section .home span {
+        color: gray; }
     html main article section .grid-container {
       display: grid;
       align-content: space-evenly;
@@ -267,6 +288,18 @@ body {
         color: white;
         text-transform: uppercase;
         text-align: center; }
+      html main article section .grid-container .review .buying .category p {
+        text-transform: uppercase; }
+        html main article section .grid-container .review .buying .category p span {
+          text-decoration: none;
+          color: grey;
+          text-transform: none; }
+      html main article section .grid-container .review .buying .tags p {
+        text-transform: uppercase; }
+        html main article section .grid-container .review .buying .tags p span {
+          text-decoration: none;
+          color: grey;
+          text-transform: none; }
       html main article section .grid-container .review .media-icons ul li {
         display: inline;
         list-style: none;
@@ -309,7 +342,7 @@ body {
       align-content: space-evenly;
       grid-template-columns: auto auto; }
       html main article section .grid-container-3 figure img {
-        max-width: 50%; }
+        width: 50%; }
       html main article section .grid-container-3 figure figcaption p span {
         text-decoration: line-through; }
     html main article section .grid-container-4 {
@@ -326,6 +359,12 @@ body {
     width: 90%;
     margin-left: auto;
     margin-right: auto; }
+    html main article section .home {
+      margin-top: 2%;
+      margin-bottom: 5%;
+      text-transform: capitalize; }
+      html main article section .home span {
+        color: gray; }
     html main article section .grid-container {
       display: grid;
       align-content: space-evenly;
@@ -414,10 +453,23 @@ body {
         background-color: white;
         color: black; }
       html main article section .grid-container .review .buying .buy button {
-        width: 100px;
+        width: 120px;
         background-color: black;
         color: white;
+        text-transform: uppercase;
+        text-align: center; }
+      html main article section .grid-container .review .buying .category p {
         text-transform: uppercase; }
+        html main article section .grid-container .review .buying .category p span {
+          text-decoration: none;
+          color: grey;
+          text-transform: none; }
+      html main article section .grid-container .review .buying .tags p {
+        text-transform: uppercase; }
+        html main article section .grid-container .review .buying .tags p span {
+          text-decoration: none;
+          color: grey;
+          text-transform: none; }
       html main article section .grid-container .review .media-icons ul li {
         display: inline;
         list-style: none;
@@ -460,7 +512,7 @@ body {
       align-content: space-evenly;
       grid-template-columns: auto; }
       html main article section .grid-container-3 figure img {
-        max-width: 90%; }
+        width: 90%; }
       html main article section .grid-container-3 figure figcaption p span {
         text-decoration: line-through; }
     html main article section .grid-container-4 {
@@ -471,398 +523,3 @@ body {
         max-width: 90%; }
       html main article section .grid-container-4 figure figcaption p span {
         text-decoration: line-through; } }
-
-* {
-  text-decoration: none;
-  list-style: none;
-  padding: 0;
-  box-sizing: border-box;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-html, body {
-  height: 100%;
-  margin: 0;
-}
-
-html p {
-  color: #999;
-}
-
-main {
-  min-height: 100%;
-}
-
-body {
-  margin: 0;
-  line-height: 1.4;
-  font-family: "Roboto", sans-serif;
-}
-body h1 {
-  font-size: 58px;
-  font-weight: 700;
-}
-body h2 {
-  font-size: 24px;
-  font-weight: 600;
-}
-body h3 {
-  font-size: 18.72px;
-  font-weight: 500;
-}
-
-a {
-  color: #222;
-}
-
-.header {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  background: #F2EDE9;
-  color: #000;
-  padding: 0 1rem;
-  height: 80px;
-  /*  search bar */
-}
-.header input {
-  border-radius: 15px;
-  outline: none;
-  width: 200px;
-  border: none;
-  height: 30px;
-  text-indent: 20px;
-}
-.header input::placeholder {
-  opacity: 0.4;
-  background-position: right;
-}
-.header__logo, .header__media {
-  flex: 1;
-}
-.header__nav {
-  display: none;
-}
-@media screen and (min-width: 968px) {
-  .header__nav {
-    display: flex;
-    flex: 2;
-  }
-}
-.header__list {
-  list-style: none;
-}
-@media screen and (min-width: 968px) {
-  .header {
-    display: flex;
-    flex: 2;
-  }
-}
-.header__media {
-  margin-left: auto;
-}
-.header__search {
-  display: none;
-}
-.header__item {
-  margin-right: 1rem;
-}
-.header__icons {
-  justify-content: flex-end;
-}
-.header__icon {
-  display: inline-block;
-  height: 24px;
-  width: 24px;
-  margin-left: 1rem;
-}
-.header__icon input {
-  height: 24px;
-  width: 24px;
-  display: inline-block;
-  margin: 0;
-  cursor: pointer;
-  opacity: 0;
-}
-.header__icons, .header__list {
-  display: flex;
-}
-.header__search {
-  max-height: 24px;
-  max-width: 200px;
-}
-@media screen and (min-width: 968px) {
-  .header__search {
-    display: flex;
-    flex: 2;
-  }
-}
-
-.header__icon {
-  z-index: 11;
-  /*Hamburger Background*/
-}
-.header__icon--menuwrap {
-  width: 24px;
-  height: 24px;
-  background: #fff;
-  display: flex;
-  /* Hamburger Line */
-  /* Hamburger Lines - Top & Bottom */
-  /* Moves Line Down */
-  /* Toggler Animation */
-  /* Turns Lines Into X */
-  /* Rotate On Hover When Checked */
-  /* Show Menu */
-  /*  positionning  */
-}
-.header__icon--menuwrap--toggler {
-  z-index: 10;
-  cursor: pointer;
-  opacity: 1;
-  padding: 0;
-  width: 60px;
-  height: 60px;
-  z-index: 21;
-}
-.header__icon--menuwrap--hamburger {
-  pointer-events: none;
-  padding: 0;
-  margin-left: -25px;
-  margin-top: 10px;
-  z-index: 20;
-}
-.header__icon--menuwrap--hamburger > div {
-  position: relative;
-  flex: none;
-  width: 100%;
-  height: 2px;
-  background: #222;
-  display: flex;
-  align-items: left;
-  justify-content: left;
-  transition: all 0.4s ease;
-}
-.header__icon--menuwrap--hamburger > div::before, .header__icon--menuwrap--hamburger > div::after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  top: -9px;
-  width: 100%;
-  height: 2px;
-  background: inherit;
-}
-.header__icon--menuwrap--toggler:checked {
-  position: fixed;
-  top: 17;
-  right: 45px;
-}
-.header__icon--menuwrap--hamburger > div::after {
-  top: 9px;
-}
-.header__icon--menuwrap--toggler:checked + .header__icon--menuwrap--hamburger > div {
-  transform: rotate(135deg);
-}
-.header__icon--menuwrap--toggler:checked + .header__icon--menuwrap--hamburger > div:before, .header__icon--menuwrap--toggler:checked + .header__icon--menuwrap--hamburger > div:after {
-  top: 0;
-  transform: rotate(90deg);
-}
-.header__icon--menuwrap--toggler:checked:hover + .header__icon--menuwrap--hamburger > div {
-  transform: rotate(225deg);
-}
-.header__icon--menuwrap--toggler:checked ~ .header__icon--menuwrap--menu {
-  visibility: visible;
-}
-.header__icon--menuwrap--toggler:checked ~ .header__icon--menuwrap--menu > div {
-  transform: scale(1);
-  transition-duration: 0.75s;
-}
-.header__icon--menuwrap--toggler:checked ~ .header__icon--menuwrap--menu > div > div {
-  opacity: 1;
-  transition: opacity 0.4s ease 0.4s;
-}
-.header__icon--menuwrap--menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.header__icon--menuwrap--menu > div {
-  position: absolute;
-  z-index: 10;
-  background: white;
-  width: 200vw;
-  height: 200vh;
-  display: flex;
-  flex: none;
-  align-items: center;
-  justify-content: center;
-  transform: scale(0);
-  transition: all 0.4s ease;
-}
-.header__icon--menuwrap--menu > div > div {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: left;
-  opacity: 0;
-  transition: opacity 0.4s ease;
-}
-.header__icon--menuwrap--menu > div > div h1 {
-  color: #222;
-}
-.header__icon--menuwrap--menu > div > div > ul > li {
-  list-style: none;
-  text-align: left;
-  font-size: 1.5rem;
-  padding: 0.65rem;
-  border-bottom: 1px solid #ccc;
-  width: 80vw;
-}
-.header__icon--menuwrap--menu > div > div > ul > li > a {
-  color: #999;
-}
-
-.footer {
-  z-index: 1;
-  position: inherit;
-  width: 100%;
-  bottom: 0;
-  height: 300px;
-  justify-content: center;
-}
-.footer .nonephone {
-  display: none;
-}
-.footer .left {
-  display: block;
-  float: left;
-  width: 46%;
-  height: 200px;
-}
-.footer .right {
-  display: block;
-  float: right;
-  width: 46%;
-  height: 200px;
-}
-.footer__listwrap {
-  display: table;
-}
-.footer__list {
-  font-size: 12px;
-  color: #999;
-  margin: 1em 2%;
-  margin-bottom: 10px;
-  height: 200px;
-  display: table-cell;
-}
-.footer__list h3 {
-  text-align: left;
-  margin: 20px 0;
-  color: #000;
-}
-.footer__list > ul > img {
-  margin-bottom: 15px;
-}
-.footer__list > ul > li {
-  margin: 15px 0;
-  font-size: 140%;
-}
-.footer__icon {
-  position: relative;
-  color: #999;
-  justify-content: center;
-  border-top: 1px solid;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-}
-.footer__icon > div {
-  width: 100%;
-  text-align: center;
-}
-.footer__icon div > ul {
-  padding: 0 5em;
-}
-.footer__icon ul > li {
-  display: inline;
-}
-.footer__icon a {
-  color: #999;
-}
-.footer .down {
-  width: 100%;
-  display: flex;
-}
-
-@media screen and (min-width: 968px) {
-  .footer__list {
-    padding: 0 4em;
-  }
-  .footer .left {
-    display: block;
-    width: auto;
-    height: 200px;
-  }
-  .footer .right {
-    display: block;
-    width: auto;
-    height: 200px;
-  }
-  .footer .nonephone {
-    display: flex;
-  }
-  .footer .nonedesk {
-    display: none;
-  }
-  .footer .up {
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 70px;
-  }
-  .footer .down {
-    width: 100%;
-    display: flex;
-  }
-}
-@media screen and (max-width: 968px) {
-  .header {
-    background: #fff;
-  }
-}
-.header__item:hover {
-  transform: scale(1.04);
-}
-@media screen and (min-width: 968px) {
-  .header__icon--menuwrap {
-    background-color: #F2EDE9;
-    display: none;
-  }
-}
-.header__icon--search {
-  display: block;
-}
-@media screen and (min-width: 968px) {
-  .header__icon--search {
-    display: none;
-  }
-}
-
-/* retourner une image */
-.reverse {
-  transform: rotateZ(90deg);
-}
-
-/*# sourceMappingURL=style.css.map */
